Fixed horizontal view for projects cards and trajectory cards section, now it's being properly rendered horizontally on small screens.

--- a/main.css
+++ b/main.css
@@ -1212,7 +1212,7 @@ height: auto;
 
 }
 /* _____________________________________________________ */
-@media (max-width:1035px) and (min-width:645px) {.project-card-container--pink, .project-card-container--green
+@media (max-width:1035px) and (min-width:550px) {.project-card-container--pink, .project-card-container--green
     {
     flex-direction: row;
     flex-wrap: nowrap;
@@ -1222,7 +1222,7 @@ height: auto;
 }
 }
 
-@media (max-width:644px) {.project-card-container--pink, .project-card-container--green
+@media (max-width:550px) {.project-card-container--pink, .project-card-container--green
     {
      margin: 20px 10%;
     }
@@ -1230,10 +1230,8 @@ height: auto;
 
 .project-card__header {
     position:relative;
-    min-width:250px;
-    min-height:240px;
-    width: 100%;
-    height: 240px;
+    width:250px;
+    height:240px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -1252,6 +1250,8 @@ height: auto;
     border-radius:50%;
     border: #fffffa 10px solid;
     background-color: #fffffa;
+    width: 150px;
+    height: 150px;
 }
 
 
@@ -1422,7 +1422,7 @@ color: white;
 
 }
 
-@media (max-width:1035px) and (min-width:645px) { .project-card__arrow-down-container
+@media (max-width:1035px) and (min-width:550px) { .project-card__arrow-down-container
 
     {
     height: 100%;
@@ -1432,7 +1432,7 @@ color: white;
 }
 }
 
-@media (max-width:1035px) and (min-width:645px) { .project-card__arrow-down-container-for-rotation
+@media (max-width:1035px) and (min-width:550px) { .project-card__arrow-down-container-for-rotation
  
     {
         transform: rotate(-90deg);
